--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "riskops-dashboard",
+  "name": "riskops-tms",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,17 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.94.1",
-    "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
-    "lucide-react": "^0.563.0",
+    "@supabase/supabase-js": "^2.96.0",
+    "@tailwindcss/postcss": "^4.1.18",
+    "lucide-react": "^0.574.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "tailwind-merge": "^3.4.0"
+    "react-router-dom": "^7.13.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
-    "@types/react": "^19.2.5",
+    "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
     "autoprefixer": "^10.4.24",
@@ -29,7 +28,8 @@
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
     "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.17",
-    "vite": "^7.2.4"
+    "supabase": "^2.76.9",
+    "tailwindcss": "^4.1.18",
+    "vite": "^7.3.1"
   }
 }
